--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "generate": "node scripts/generate.js",
     "prepare": "webpack --config webpack/publish.config.js --progress",
     "server": "node server.js",
-    "start": "node ./Parse-Dashboard/index.js"
+    "start": "node ./Parse-Dashboard/index.js --config ./parse-dashboard-config.json --allowInsecureHTTP=1"
   },
   "bin": {
     "parse-dashboard": "./bin/parse-dashboard"
