--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -8,5 +8,11 @@
     "primaryBackgroundColor": "",
     "secondaryBackgroundColor": ""
   }],
+  "users": [
+    {
+      "user":"username",
+      "pass":"password"
+    }
+  ],
   "iconsFolder": "icons"
 }
